--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mongoose-sequence": "^5.0.1",
     "nuxt": "^2.4.0",
     "nuxt-client-init-module": "^0.1.4",
+    "qrcode": "^1.3.3",
+    "razorpay": "^2.0.4",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "smsapi-nodejs": "bubundas17/smsgateway",
@@ -36,7 +38,7 @@
     "validator": "^10.11.0",
     "vee-validate": "^2.2.7",
     "vue-datetime": "^1.0.0-beta.10",
-    "vuetify": "^1.5.5",
+    "vuetify": "^1.5.14",
     "vuetify-loader": "^1.2.1",
     "vuex-persistedstate": "^2.5.4",
     "weekstart": "^1.0.0",
